fixed z-index

--- a/pages.css
+++ b/pages.css
@@ -45,6 +45,7 @@
 	top: 2%;
 	height: 100%;
 	width: 100%;
+	z-index: 4;
 }
 
 .gallery-shown {
@@ -73,6 +74,16 @@
 	overflow-x:scroll;
 	margin-left: 95%;
 	margin-top: 15%;
+}
+
+.image-gallery::-webkit-scrollbar {
+    width: .9em;
+    outline: 2px solid black;
+}
+
+.image-gallery::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 0, 0);
+  border: 2px solid black;
 }
 
 .scroll-arrow {
